Hyprland configurations separated into different files.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,25 +1,4 @@
 ############################
-#        ENV VARS         #
-############################
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = RUST_BACKTRACE,1
-env = TERMINAL,kitty
-
-# QT Theming
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = QT_STYLE_OVERRIDE,kvantum
-
-# GTK Theming
-env = GTK_THEME,JQN-Dark
-
-# Cursor Theming
-env = HYPRCURSOR_SIZE,24
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-env = XCURSOR_THEME,Bibata-Modern-Classic
-
-############################
 #     DEFAULT PROGRAMS     #
 ############################
 $mainMod = SUPER
@@ -58,6 +37,8 @@ decoration {
     rounding_power = 2.0
 }
 
+source = $HOME/.config/hypr/config/theming.conf
+
 ############################
 #     WINDOW RULES        #
 ############################
@@ -75,25 +56,7 @@ general {
     border_size = 2
 }
 
-############################
-#   DEVICE CONFIGURATION  #
-############################
-device {
-  name = beken-2.4g-wireless-device-1
-  accel_profile = flat
-}
-device {
-  name = beken-2.4g-wireless-device-2
-  accel_profile = flat
-}
-device {
-  name = beken-usb-gaming-mouse-1
-  accel_profile = flat
-}
-device {
-  name = beken-usb-gaming-mouse-2
-  accel_profile = flat
-}
+source = $HOME/.config/hypr/config/devices.conf
 
 ############################
 #     WINDOW ANIMATIONS   #
@@ -106,12 +69,6 @@ animation = layersOut, 1, 5, default
 animation = workspaces, 1, 5, default
 animation = fadeOut, 1, 10, default
 
-############################
-#        VOLUME KEYS      #
-############################
-bind = , XF86AudioRaiseVolume, exec, ~/.config/mako/volume.sh --inc
-bind = , XF86AudioLowerVolume, exec, ~/.config/mako/volume.sh --dec
-bind = , XF86AudioMute, exec, ~/.config/mako/volume.sh --toggle
 
 ############################
 #       AUTOSTART         #
@@ -126,77 +83,4 @@ exec-once = ~/.config/hypr/scripts/battery-watcher.sh &
 ############################
 monitor = ,1920x1080@144,auto,1.0
 
-############################
-#  WORKSPACE SWITCHING    #
-############################
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-
-############################
-#       KEYBINDS         #
-############################
-
-# ──────────────────────────────
-# Window & Session Management
-# ──────────────────────────────
-bind = $mainMod, Q, killactive
-bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, SPACE, togglefloating
-bind = ALT, Return, fullscreen
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod SHIFT, X, exec, hyprlock
-
-# ──────────────────────────────
-# App Shortcuts
-# ──────────────────────────────
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod ALT, E, exec, $fileManager-alt
-bind = $mainMod, PERIOD, exec, rofi -show emoji
-bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/swappy.sh
-
-# ──────────────────────────────
-# Window Movement & Resizing
-# ──────────────────────────────
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-bind = $mainMod ALT, H, resizeactive, -20 0
-bind = $mainMod ALT, J, resizeactive, 0 20
-bind = $mainMod ALT, K, resizeactive, 0 -20
-bind = $mainMod ALT, L, resizeactive, 20 0
-
-# ──────────────────────────────
-# System Utilities
-# ──────────────────────────────
-bind = $mainMod SHIFT, P, exec, wlogout
-
-############################
-#    WINDOW MANAGEMENT    #
-############################
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-bind = $mainMod SHIFT, k, movewindow, u
-bind = $mainMod SHIFT, j, movewindow, d
+source = $HOME/.config/hypr/config/keybinds.conf
