--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -1,3 +1,7 @@
+input {
+    kb_options = caps:escape
+}
+
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
@@ -57,7 +61,7 @@ bind = $mainMod SHIFT, j, movewindow, d
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
-bind = $mainMod, PERIOD, exec, rofi -show emoji
+bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/swappy.sh
 
