Pushing a lot of changes.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -1,6 +1,6 @@
-input {
-    kb_options = caps:escape
-}
+# input {
+#     kb_options = caps:escape
+# }
 
 # ──────────────────────────────
 # Volume Control
@@ -64,6 +64,7 @@ bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/swappy.sh
+# bind = $mainMod SHIFT, S, exec, hyprshot -m region -z
 
 # ──────────────────────────────
 # Window Movement & Resizing
