--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -8,7 +8,7 @@
     },
 
     "logo": {
-        "source": "/home/joaquin/.config/fastfetch/logo.txt",
+        "source": "/home/joaquin/.config/fastfetch/logos/logo.txt",
         "color": {
             "1": "238;238;238",
 	    "2": "238;238;238"
