--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 ############################
 #       LAYER RULES        #
 ############################
+layerrule = ignorealpha, rofi
 layerrule = blur,notifications
 layerrule = ignorezero,notifications
 layerrule = blur,wofi
@@ -30,11 +31,11 @@ layerrule = blur,logout_dialog
 decoration {
     blur {
         enabled = true
+        ignore_opacity = true
         new_optimizations = true
-        # xray = true
+        xray = true
     }
     rounding = 7
-    rounding_power = 2.0
 }
 
 source = $HOME/.config/hypr/config/theming.conf
@@ -42,17 +43,19 @@ source = $HOME/.config/hypr/config/theming.conf
 ############################
 #     WINDOW RULES        #
 ############################
-windowrulev2 = noblur, class:^org.vinegarhq.Sober$
 windowrulev2 = opacity 0.8, class:^nemo$
+# windowrulev2 = opacity 0.8, class:^kitty$
+windowrulev2 = opacity 0.8, class:^vesktop$
+windowrulev2 = noblur, class:^org.vinegarhq.Sober$
 
 ############################
 #       GENERAL           #
 ############################
 general {
-    gaps_in = 5
-    gaps_out = 10
-    col.active_border = rgb(dddddd)
-    col.inactive_border = rgb(252525)
+    gaps_in = 4
+    gaps_out = 12
+    col.active_border = rgb(eeeeee)
+    col.inactive_border = rgb(353535)
     border_size = 2
 }
 
@@ -61,13 +64,15 @@ source = $HOME/.config/hypr/config/devices.conf
 ############################
 #     WINDOW ANIMATIONS   #
 ############################
-animation = windows, 1, 5, default
-animation = windowsIn, 1, 5, default, slide bottom 50%
-animation = windowsOut, 1, 5, default, slide bottom 100%
-animation = layersIn, 1, 5, default
-animation = layersOut, 1, 5, default
-animation = workspaces, 1, 5, default
-animation = fadeOut, 1, 10, default
+animations {
+#     enabled = false
+    animation = windows, 1, 3, default
+    animation = windowsIn, 1, 3, default, slide bottom 100%
+    animation = windowsOut, 1, 3, default, slide bottom 100%
+    animation = workspaces, 1, 5, default
+    animation = fadeIn, 1, 10, default
+    animation = fadeOut, 1, 10, default
+}
 
 
 ############################
@@ -76,7 +81,7 @@ animation = fadeOut, 1, 10, default
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
-exec-once = ~/.config/hypr/scripts/battery-watcher.sh &
+exec-once = ~/.config/hypr/scripts/power_saver.sh &
 
 ############################
 #   MONITOR CONFIGURATION #
