Files moved to better places

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -1,13 +1,10 @@
-# input {
-#     kb_options = caps:escape
-# }
 
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
-bind = , XF86AudioRaiseVolume, exec, ~/.config/mako/volume.sh --inc
-bind = , XF86AudioLowerVolume, exec, ~/.config/mako/volume.sh --dec
-bind = , XF86AudioMute, exec, ~/.config/mako/volume.sh --toggle
+bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh --inc
+bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh --dec
+bind = , XF86AudioMute, exec, ~/.config/hypr/scrits/volume.sh --toggle
 
 # ──────────────────────────────
 # Workspace Management
