--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,4 +1,12 @@
 ############################
+#       AUTOSTART         #
+############################
+exec-once = waybar &
+exec-once = hyprpaper &
+exec-once = mako &
+exec-once = ~/.config/hypr/scripts/power_saver.sh &
+
+############################
 #     DEFAULT PROGRAMS     #
 ############################
 $mainMod = SUPER
@@ -36,30 +44,25 @@ decoration {
         xray = true
     }
     rounding = 7
+    rounding_power = 2.0
 }
-
-source = $HOME/.config/hypr/config/theming.conf
 
 ############################
 #     WINDOW RULES        #
 ############################
 windowrulev2 = opacity 0.8, class:^nemo$
-# windowrulev2 = opacity 0.8, class:^kitty$
-windowrulev2 = opacity 0.8, class:^vesktop$
 windowrulev2 = noblur, class:^org.vinegarhq.Sober$
 
 ############################
 #       GENERAL           #
 ############################
 general {
-    gaps_in = 4
-    gaps_out = 12
+    gaps_in = 3
+    gaps_out = 16
     col.active_border = rgb(eeeeee)
     col.inactive_border = rgb(353535)
     border_size = 2
 }
-
-source = $HOME/.config/hypr/config/devices.conf
 
 ############################
 #     WINDOW ANIMATIONS   #
@@ -74,18 +77,11 @@ animations {
     animation = fadeOut, 1, 10, default
 }
 
-
-############################
-#       AUTOSTART         #
-############################
-exec-once = waybar &
-exec-once = hyprpaper &
-exec-once = mako &
-exec-once = ~/.config/hypr/scripts/power_saver.sh &
-
 ############################
 #   MONITOR CONFIGURATION #
 ############################
 monitor = ,1920x1080@144,auto,1.0
 
+source = $HOME/.config/hypr/config/devices.conf
 source = $HOME/.config/hypr/config/keybinds.conf
+source = $HOME/.config/hypr/config/theming.conf
