--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 include current-theme.conf
 
 background_opacity 0.8
+set-spacing padding=20
+allow_remote_control yes
 
 # Fonts
 font_size	              12.5
