--- a/omp/.config/omp.toml
+++ b/omp/.config/omp.toml
@@ -3,46 +3,49 @@ version = 3
 final_space = true
 
 [[blocks]]
-  type = 'prompt'
-  alignment = 'left'
-  newline = true
-  
-  [[blocks.segments]]
-    type = 'path'
-    style = 'plain'
-    background = 'transparent'
-    foreground = "blue"
-    template = '{{ .Path }}'
-      
-      [blocks.segments.properties]
-        style = 'full'
+type = 'prompt'
+alignment = 'left'
 
-  [[blocks.segments]]
-    type = 'git'
-    style = 'plain'
-    foreground = '#666666'
-    background = 'transparent'
-    template = ' {{ .HEAD }}'
+[[blocks.segments]]
+type = 'path'
+style = 'plain'
+background = 'transparent'
+foreground = "blue"
+template = '{{ .Path }}'
+
+      [blocks.segments.properties]
+          style = 'full'
+
+[[blocks.segments]]
+type = 'git'
+style = 'plain'
+foreground = 'cyan'
+background = 'transparent'
+template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} <cyan>{{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}</>'
+
+      [blocks.segments.properties]
+            branch_icon=''
+            fetch_status = true
 
 [[blocks]]
-  type = 'prompt'
-  alignment = 'left'
-  newline = true
+type = 'prompt'
+alignment = 'left'
+newline = true
 
-  [[blocks.segments]]
-    type = 'text'
-    style = 'plain'
-    foreground_templates = [
-      "{{if gt .Code 0}}red{{end}}",
-      "{{if eq .Code 0}}green{{end}}",
-    ]
-    background = 'transparent'
-    template = '❯'
+[[blocks.segments]]
+type = 'text'
+style = 'plain'
+foreground_templates = [
+    "{{if gt .Code 0}}red{{end}}",
+    "{{if eq .Code 0}}green{{end}}",
+]
+background = 'transparent'
+template = '❯'
 
 [transient_prompt]
-  foreground_templates = [
-      "{{if gt .Code 0}}red{{end}}",
-      "{{if eq .Code 0}}green{{end}}",
-  ]
-  background = 'transparent'
-  template = '❯ '
+foreground_templates = [
+    "{{if gt .Code 0}}red{{end}}",
+    "{{if eq .Code 0}}green{{end}}",
+]
+background = 'transparent'
+template = '❯ '
