zsh configuration is more structured and P10K is replaced by OMP.

--- a/omp/.config/omp.toml
+++ b/omp/.config/omp.toml
@@ -26,6 +26,19 @@ template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end
       [blocks.segments.properties]
             branch_icon=''
             fetch_status = true
+[[blocks]]
+  type = 'rprompt'
+  overflow = 'hidden'
+
+  [[blocks.segments]]
+    type = 'executiontime'
+    style = 'plain'
+    foreground = 'yellow'
+    background = 'transparent'
+    template = '{{ .FormattedMs }}'
+
+    [blocks.segments.properties]
+      threshold = 5000
 
 [[blocks]]
 type = 'prompt'
