--- a/hypr/.config/hypr/config/devices.conf
+++ b/hypr/.config/hypr/config/devices.conf
@@ -2,18 +2,22 @@
 # Device configurations
 # ──────────────────────────────
 device {
-  name = beken-2.4g-wireless-device-1
-  accel_profile = flat
+    name = elan1203:00-04f3:307a-touchpad
+    natural_scroll = true
 }
 device {
-  name = beken-2.4g-wireless-device-2
-  accel_profile = flat
+    name = beken-2.4g-wireless-device-1
+    accel_profile = flat
 }
 device {
-  name = beken-usb-gaming-mouse-1
-  accel_profile = flat
+    name = beken-2.4g-wireless-device-2
+    accel_profile = flat
 }
 device {
-  name = beken-usb-gaming-mouse-2
-  accel_profile = flat
+    name = beken-usb-gaming-mouse-1
+    accel_profile = flat
+}
+device {
+    name = beken-usb-gaming-mouse-2
+    accel_profile = flat
 }
