Waybar placed at the bottom now.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -5,11 +5,11 @@ exec-once = ~/.config/hypr/scripts/power_saver.sh &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
+$mainMod = SUPER
 
 ############################
 #     DEFAULT PROGRAMS     #
 ############################
-$mainMod = SUPER
 $terminal = kitty
 $fileManager = nemo
 $fileManager-alt = kitty -e yazi
@@ -27,9 +27,7 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 #       LAYER RULES        #
 ############################
 layerrule = ignorealpha, rofi
-layerrule = blur,notifications
 layerrule = ignorezero,notifications
-layerrule = blur,wofi
 layerrule = blur,rofi
 layerrule = blur,logout_dialog
 
@@ -50,17 +48,17 @@ decoration {
 ############################
 #     WINDOW RULES        #
 ############################
-windowrulev2 = opacity 0.8, class:^nemo$
-windowrulev2 = noblur, class:^org.vinegarhq.Sober$
+windowrulev2 = opacity 0.8, class:^(nemo)$
+windowrulev2 = opacity 0.8, class:^(spotify)$
 
 ############################
 #       GENERAL           #
 ############################
 general {
     gaps_in = 3
-    gaps_out = 12
+    gaps_out = 9
     col.active_border = rgb(eeeeee)
-    col.inactive_border = rgb(353535)
+    col.inactive_border = rgb(323232)
     border_size = 2
 }
 
@@ -68,10 +66,10 @@ general {
 #     WINDOW ANIMATIONS   #
 ############################
 animations {
-#     enabled = false
+    # enabled = false
     animation = windows, 1, 5, default
-    animation = windowsIn, 1, 5, default, slide bottom 100%
-    animation = windowsOut, 1, 5, default, slide bottom 100%
+    animation = windowsIn, 1, 5, default, slide top 25%
+    animation = windowsOut, 1, 5, default, slide top 25%
     animation = workspaces, 1, 5, default
 }
 
