--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -4,7 +4,7 @@ text-alignment=center
 width=300
 height=200
 default-timeout=3000
-background-color=#1c1c1cCC
+background-color=#1c1c1c
 border-color=#eeeeee
-border-radius=8
+border-radius=7
 font=Rubik, JetBrainsMono Nerd Font 13
