--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
     "include": "~/.config/waybar/modules.json",
     "layer": "top",
-    "position": "top",
+    "position": "bottom",
     "height": 32,
     "spacing": 4,
     "modules-left": [
@@ -10,7 +10,7 @@
         "hyprland/workspaces",
     ],
     "modules-center": [
-        "hyprland/window"
+
     ],
     "modules-right": [
         "tray",
