Animations are done a little better.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,32 +24,29 @@ exec-once = wl-paste --type image --watch cliphist store
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 ############################
-#       LAYER RULES        #
-############################
-layerrule = ignorealpha, rofi
-layerrule = ignorezero,notifications
-layerrule = blur,rofi
-layerrule = blur,logout_dialog
-
-############################
 #      DECORATIONS        #
 ############################
 decoration {
     blur {
         enabled = true
+        size = 4
+        passes = 2
         ignore_opacity = true
         new_optimizations = true
-        xray = true
+        # xray = true
     }
     rounding = 7
     rounding_power = 2.0
+    layerrule = blur,notifications
+    layerrule = blur,rofi
+    layerrule = blur,logout_dialog
+    layerrule = ignorealpha, rofi
+    layerrule = ignorezero,notifications
+    windowrulev2 = opacity 0.8, class:^(nemo)$
+    layerrule = xray 1, rofi
+    windowrulev2 = xray 1, class:^(nemo)$
+    windowrulev2 = xray 1, class:^(kitty)$
 }
-
-############################
-#     WINDOW RULES        #
-############################
-windowrulev2 = opacity 0.8, class:^(nemo)$
-windowrulev2 = opacity 0.8, class:^(spotify)$
 
 ############################
 #       GENERAL           #
@@ -66,11 +63,10 @@ general {
 #     WINDOW ANIMATIONS   #
 ############################
 animations {
-    # enabled = false
-    animation = windows, 1, 5, default
-    animation = windowsIn, 1, 5, default, slide top 25%
-    animation = windowsOut, 1, 5, default, slide top 25%
-    animation = workspaces, 1, 5, default
+    bezier = smooth, 0.3, 0.8, 0.3, 1.0
+    animation = windowsIn, 1, 4, smooth, slide bottom 25%
+    animation = windowsOut, 1, 4, smooth, slide bottom 25%
+    animation = workspaces, 0, 5, default
 }
 
 ############################
