Modularized Hypr configurations.:

--- a/hypr/.config/hypr/config/devices.conf
+++ b/hypr/.config/hypr/config/devices.conf
@@ -1,4 +1,9 @@
 # ──────────────────────────────
+# Monitor configuration
+# ──────────────────────────────
+monitor = ,1920x1080@144,auto,1.0
+
+# ──────────────────────────────
 # Device configurations
 # ──────────────────────────────
 device {
