--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -1,9 +1,26 @@
+############################
+#     DEFAULT PROGRAMS     #
+############################
+$mainMod = SUPER
+$terminal = kitty
+$fileManager = nemo
+$fileManager-alt = kitty -e yazi
+$browser = zen-browser
+$menu = rofi -disable-history -show drun
+
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
 bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh --inc
 bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh --dec
 bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh --toggle
+
+# ──────────────────────────────
+# Clipboard history
+# ──────────────────────────────
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # ──────────────────────────────
 # Workspace Management
