--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,79 +1,5 @@
-############################
-#       AUTOSTART         #
-############################
-exec-once = ~/.config/hypr/scripts/power_saver.sh &
-exec-once = waybar &
-exec-once = hyprpaper &
-exec-once = mako &
-$mainMod = SUPER
-
-############################
-#     DEFAULT PROGRAMS     #
-############################
-$terminal = kitty
-$fileManager = nemo
-$fileManager-alt = kitty -e yazi
-$browser = zen-browser
-$menu = rofi -disable-history -show drun
-
-############################
-#     CLIPBOARD HISTORY    #
-############################
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-
-############################
-#      DECORATIONS        #
-############################
-decoration {
-    blur {
-        enabled = true
-        size = 4
-        passes = 2
-        ignore_opacity = true
-        new_optimizations = true
-        # xray = true
-    }
-    rounding = 7
-    rounding_power = 2.0
-    layerrule = blur,notifications
-    layerrule = blur,rofi
-    layerrule = blur,logout_dialog
-    layerrule = ignorealpha, rofi
-    layerrule = ignorezero,notifications
-    windowrulev2 = opacity 0.8, class:^(nemo)$
-    layerrule = xray 1, rofi
-    windowrulev2 = xray 1, class:^(nemo)$
-    windowrulev2 = xray 1, class:^(kitty)$
-}
-
-############################
-#       GENERAL           #
-############################
-general {
-    gaps_in = 3
-    gaps_out = 9
-    col.active_border = rgb(eeeeee)
-    col.inactive_border = rgb(323232)
-    border_size = 2
-}
-
-############################
-#     WINDOW ANIMATIONS   #
-############################
-animations {
-    bezier = smooth, 0.3, 0.8, 0.3, 1.0
-    animation = windowsIn, 1, 4, smooth, slide bottom 25%
-    animation = windowsOut, 1, 4, smooth, slide bottom 25%
-    animation = workspaces, 0, 5, default
-}
-
-############################
-#   MONITOR CONFIGURATION #
-############################
-monitor = ,1920x1080@144,auto,1.0
-
+source = $HOME/.config/hypr/config/autostart.conf
+source = $HOME/.config/hypr/config/aesthetics.conf
 source = $HOME/.config/hypr/config/devices.conf
 source = $HOME/.config/hypr/config/keybinds.conf
 source = $HOME/.config/hypr/config/theming.conf
