--- a/hypr/.config/hypr/config/aesthetics.conf
+++ b/hypr/.config/hypr/config/aesthetics.conf
@@ -28,7 +28,7 @@ decoration {
 # ──────────────────────────────
 general {
     gaps_in = 3
-    gaps_out = 9
+    gaps_out = 10
     col.active_border = rgb(eeeeee)
     col.inactive_border = rgb(323232)
     border_size = 2
@@ -38,8 +38,7 @@ general {
 # Animations
 # ──────────────────────────────
 animations {
-    bezier = smooth, 0.3, 0.8, 0.3, 1.0
-    animation = windowsIn, 1, 4, default, slide bottom 25%
-    animation = windowsOut, 1, 3, smooth, slide bottom 25%
-    animation = workspaces, 0, 5, default
+    animation = windowsIn, 1, 4, default, slide
+    animation = windowsOut, 1, 4, default, slide
+    animation = workspaces, 0, 6, default
 }
