--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,9 @@
+# Theme
 include current-theme.conf
 
+# Look and feel
 background_opacity 0.8
-window_padding_width 6 6 6 6
+window_padding_width 6
 allow_remote_control yes
 
 # Fonts
