kitty config changes

--- a/hypr/.config/hypr/config/aesthetics.conf
+++ b/hypr/.config/hypr/config/aesthetics.conf
@@ -18,6 +18,7 @@ decoration {
     layerrule = ignorealpha, rofi
     layerrule = ignorezero,notifications
     windowrulev2 = opacity 0.8, class:^(nemo)$
+    windowrulev2 = opacity 0.8, class:^(Spotify)$
     layerrule = xray 1, rofi
     windowrulev2 = xray 1, class:^(nemo)$
     windowrulev2 = xray 1, class:^(kitty)$
