--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -30,4 +30,5 @@ bold_italic = { family = "JetBrainsMono Nerd Font Mono", style = "Bold Italic" }
 size = 12.5
 
 [window]
+padding = { x = 6, y = 6 }
 opacity = 0.8
