--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -2,7 +2,7 @@
 #     DEFAULT PROGRAMS     #
 ############################
 $mainMod = SUPER
-$terminal = kitty
+$terminal = alacritty
 $fileManager = nemo
 $fileManager-alt = kitty -e yazi
 $browser = zen-browser
