--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -2,7 +2,7 @@
 #     DEFAULT PROGRAMS     #
 ############################
 $mainMod = SUPER
-$terminal = alacritty
+$terminal = kitty
 $fileManager = nemo
 $fileManager-alt = kitty -e yazi
 $browser = zen-browser
@@ -76,8 +76,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
-# bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
-bind = $mainMod SHIFT, S, exec, hyprshot -m region -z
+bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
+# bind = $mainMod SHIFT, S, exec, hyprshot -m region -z
 
 # ──────────────────────────────
 # Window Movement & Resizing
