--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -3,13 +3,16 @@ foreground                #eeeeee
 selection_background      #4d4d4d
 selection_foreground      #e1e1e1
 url_color                 #5a666f
-active_border_color       #333333
+active_border_color       #1b7fae
 inactive_border_color     #4d4d4d
 bell_border_color         #865054
-active_tab_background     #2a2a2a
+active_tab_background     #404040
 active_tab_foreground     #eeeeee
-inactive_tab_background   #3a3a3a
+inactive_tab_background   #282828
 inactive_tab_foreground   #b0b0b0
+tab_bar_edge              top
+tab_powerline_style round
+tab_bar_style powerline
 color0                    #1c1c1c
 color1                    #865054
 color2                    #5f7a5f
