envvars moved to the hypr config file.

--- a/hypr/.config/hypr/config/aesthetics.conf
+++ b/hypr/.config/hypr/config/aesthetics.conf
@@ -6,22 +6,23 @@ decoration {
         enabled = true
         size = 4
         passes = 2
+        popups = true
         ignore_opacity = true
         new_optimizations = true
-        # xray = true
     }
     rounding = 7
     rounding_power = 2.0
-    layerrule = blur,notifications
-    layerrule = blur,rofi
-    layerrule = blur,logout_dialog
-    layerrule = ignorealpha, rofi
-    layerrule = ignorezero,notifications
-    windowrulev2 = opacity 0.8, class:^(nemo)$
-    layerrule = xray 1, rofi
-    windowrulev2 = xray 1, class:^(nemo)$
-    windowrulev2 = xray 1, class:^(kitty)$
 }
+
+layerrule = blur,notifications
+layerrule = blur,rofi
+layerrule = blur,logout_dialog
+layerrule = ignorealpha, rofi
+layerrule = ignorezero,notifications
+layerrule = xray 1, rofi
+windowrulev2 = opacity 0.8, class:^(nemo)$
+windowrulev2 = opacity 0.8, class:^(Spotify)$
+windowrulev2 = xray 1, class:^(kitty)$
 
 # ──────────────────────────────
 # Window decorations
