--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -2,3 +2,4 @@ exec-once = ~/.config/hypr/scripts/power_saver.sh &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
