--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,6 +5,9 @@ include current-theme.conf
 background_opacity 0.8
 window_padding_width 4
 allow_remote_control yes
+tab_bar_edge top
+tab_powerline_style round
+tab_bar_style powerline
 
 # Fonts
 font_size	              13
