--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,14 +3,13 @@ include current-theme.conf
 
 # Look and feel
 background_opacity 0.8
-window_padding_width 4
-allow_remote_control yes
-tab_bar_edge top
+cursor_blink_interval 0.5
 tab_powerline_style round
 tab_bar_style powerline
+window_padding_width 4
 
 # Fonts
-font_size	              13
+font_size	              13.5
 font_family               family="JetBrainsMono Nerd Font Mono"
 bold_font                 auto
 italic_font               auto
