--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,14 +1,14 @@
 background                #181818
 foreground                #eeeeee
-selection_background      #4d4d4d
-selection_foreground      #e1e1e1
-url_color                 #5a666f
+selection_background      #323232
+selection_foreground      none
+url_color                 #5f7a8c
 active_border_color       #1b7fae
 inactive_border_color     #4d4d4d
 bell_border_color         #865054
-active_tab_background     #404040
+active_tab_background     #454545
 active_tab_foreground     #eeeeee
-inactive_tab_background   #282828
+inactive_tab_background   #252525
 inactive_tab_foreground   #b0b0b0
 color0                    #1c1c1c
 color1                    #865054
