--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "display": {
         "color": {
-            "keys": "238;238;238"
+            "keys": "red"
         },
         "separator": " "
     },
@@ -10,13 +10,20 @@
     "logo": {
         "source": "/home/joaquin/.config/fastfetch/logo.txt",
         "color": {
-            "1": "blue",
+            "1": "white",
         }
     },
 
     "modules": [
-        "title",
-        "break",
+        {
+            "type": "title",
+            "color": {
+                "user": "white",
+                "at": "red",
+                "host": "white"
+            }
+        },
+        "separator",
         {
             "type": "os",
             "key": "~"
@@ -60,11 +67,6 @@
             "type": "swap",
             "key": "~"
         },
-        "break",
-        {
-            "type": "colors",
-            "symbol": "circle",
-        }
     ]
 }
 
