Just a few GTK color changes. Trynna figure out how to change inactive colors and whatnot.

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -9,12 +9,9 @@
         "custom/space",
         "hyprland/workspaces"
     ],
-    // "modules-center": [
-    //     "custom/fm",
-    //     "custom/web",
-    //     "custom/games",
-    //     "custom/terminal"
-    // ],
+    "modules-center": [
+
+    ],
     "modules-right": [
         "tray",
         "network",
