--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -78,6 +78,7 @@ bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
 # bind = $mainMod SHIFT, S, exec, hyprshot -m region -z
+bind = SUPER,F10,pass,^(com\.obsproject\.Studio)$
 
 # ──────────────────────────────
 # Window Movement & Resizing
