--- a/hypr/.config/hypr/config/aesthetics.conf
+++ b/hypr/.config/hypr/config/aesthetics.conf
@@ -38,7 +38,17 @@ general {
 # Animations
 # ──────────────────────────────
 animations {
-    animation = windowsIn, 1, 4, default, slide
-    animation = windowsOut, 1, 4, default, slide
-    animation = workspaces, 0, 6, default
+    enabled = yes
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 5, winIn, slide
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, once
+    animation = fade, 1, 10, default
+    animation = workspaces, 0, 5, wind, slide
 }
