Top bar.. again.

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -25,7 +25,7 @@
         },
         {
             "type": "custom",
-            "format": "─────────────────"
+            "format": "•••••••••••••••••"
         },
         {
             "type": "os",
@@ -75,11 +75,11 @@
         },
         {
             "type": "custom",
-            "format": "───────────────"
+            "format": "•••••••••••••••"
         },
         {
             "type": "colors",
-            "symbol": "circle"
+            "symbol": "circle",
         }
     ]
 }
