Window titles for terminals look better.

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,12 +1,13 @@
 # Theme
 include current-theme.conf
+shell_integration no-title
 
 # Look and feel
 background_opacity 0.8
 cursor_blink_interval 0.5
 tab_powerline_style round
 tab_bar_style powerline
-window_padding_width 4
+window_padding_width 4.115
 
 # Fonts
 font_size	              13.115
