Changed some stuff.

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -19,7 +19,7 @@ background {
 label {
     monitor =
     text = cmd[update:30000] echo "$(date +"%I:%M %p")"
-    color = $text
+    color = $accent
     font_size = 80
     font_family = $font
     position = -27, 0
@@ -61,10 +61,10 @@ input-field {
     dots_spacing = 0.2
     dots_center = true
     outer_color = rgb(eeeeee)
-    inner_color = rgb(252525)
+    inner_color = rgb(1c1c1c)
     font_color = rgb(eeeeee)
     fade_on_empty = false
-    placeholder_text = 󰌾 Logged in as $USER
+    placeholder_text = Logged in as $USER
     hide_input = false
     check_color = $accent
     fail_color = $red
