--- a/hypr/.config/hypr/config/aesthetics.conf
+++ b/hypr/.config/hypr/config/aesthetics.conf
@@ -16,6 +16,7 @@ decoration {
 
 layerrule = blur,notifications
 layerrule = blur,rofi
+layerrule = blur,waybar
 layerrule = blur,logout_dialog
 layerrule = ignorealpha, rofi
 layerrule = ignorezero,notifications
