Screenshots freeze the screen now.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -76,8 +76,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
-# bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
-bind = $mainMod SHIFT, S, exec, hyprshot -m region -z
+bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
 bind = SUPER,F10,pass,^(com\.obsproject\.Studio)$
 
 # ──────────────────────────────
