Removed the search bar on the Wi-Fi rofi script

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -20,7 +20,7 @@ bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh --toggle
 # ──────────────────────────────
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Clipboard:" | cliphist decode | wl-copy
 
 # ──────────────────────────────
 # Workspace Management
