Fixed up the wifi menu (again)

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,6 +5,7 @@ shell_integration no-title
 # Look and feel
 background_opacity 0.8
 cursor_blink_interval 0.5
+erase_scrollback_on_clear yes
 tab_powerline_style round
 tab_bar_style powerline
 window_padding_width 4.115
