--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -11,9 +11,9 @@ $menu = rofi -disable-history -show drun
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
-bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume.sh --inc
-bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume.sh --dec
-bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume.sh --toggle
+bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc
+bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec
+bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
 
 # ──────────────────────────────
 # Clipboard history
@@ -76,7 +76,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot.sh
+bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot
 bind = SUPER,F10,pass,^(com\.obsproject\.Studio)$
 
 # ──────────────────────────────
