--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -1,4 +1,4 @@
-exec-once = ~/.config/hypr/scripts/power_saver.sh &
+exec-once = ~/.config/hypr/scripts/power_saver &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
